Disabled word-wrap in options textboxes and set monospace font. This fixes issue #1089.

--- a/Duplicati/Server/webroot/stylesheets/main.css
+++ b/Duplicati/Server/webroot/stylesheets/main.css
@@ -287,6 +287,12 @@ div.main-icon-plus {
     border-bottom-left-radius: 0px;
 }
 
+textarea.pre-style-text, .pre-style-text {
+    white-space: nowrap; 
+    overflow: auto;
+    font-family: "Courier New", Courier, monospace;
+}
+
 #click-intercept {
     position: absolute;
     top: 0;
